NSG/DeployifNotExist-NSG-SaltStack-Block.json
{
  "mode": "all",
  "parameters": {},
  "displayName": "Enforce Block Salstack Ports",
  "description": "Create Rule to block Saltstack ports with highest priority",
  "policyRule": {
    "if": {
      "allOf": [
        {
          "field": "type",
          "equals": "Microsoft.Network/networkSecurityGroups"
        }
      ]
    },
    "then": {
      "effect": "deployIfNotExists",
      "details": {
        "type": "Microsoft.Network/networkSecurityGroups/securityRules",
        "existenceCondition": {
              "count": {
                "field": "Microsoft.Network/networkSecurityGroups/securityRules[*]",
                "where": {
                  "allOf": [
                    {
                      "field": "Microsoft.Network/networkSecurityGroups/securityRules[*].direction",
                      "equals": "Inbound"
                    },
                    {
                      "field": "Microsoft.Network/networkSecurityGroups/securityRules[*].access",
                      "equals": "Deny"
                    },
                    {
                      "field": "Microsoft.Network/networkSecurityGroups/securityRules[*].sourceAddressPrefix",
                      "equals": "*"
                    },
                    {
                      "anyOf": [
                        {
                          "field": "Microsoft.Network/networkSecurityGroups/securityRules[*].destinationPortRange",
                          "equals": "4505"
                        },
                        {
                          "field": "Microsoft.Network/networkSecurityGroups/securityRules[*].destinationPortRange",
                          "equals": "4506"
                        }
                      ]
                    }
                  ]
                }
              },
              "less": 2
            },
        "roleDefinitionIds": [
          "/providers/Microsoft.Authorization/roleDefinitions/b24988ac-6180-42a0-ab88-20f7382dd24c"
        ],
        "deployment": {
          "properties": {
            "mode": "incremental",
            "parameters": {
              "resourceName": {
                "value": "[field('fullName')]"
              }
            },
            "template": {
              "$schema": "http://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
              "contentVersion": "1.0.0.0",
              "parameters": {
                "resourceName": {
                  "type": "string"
                }
              },
              "resources": [
                {
                  "apiVersion": "2018-08-01",
                  "type": "Microsoft.Network/networkSecurityGroups/securityRules",
                  "name": "[concat(parameters('resourceName'), '/SaltStack4505Block')]",
                  "properties": {
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "destinationPortRange": "4505",
                    "sourceAddressPrefix": "*",
                    "destinationAddressPrefix": "Internet",
                    "access": "Deny",
                    "priority": 4000,
                    "direction": "Inbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                  }
                },
                {
                    "apiVersion": "2018-08-01",
                    "type": "Microsoft.Network/networkSecurityGroups/securityRules",
                    "name": "[concat(parameters('resourceName'), '/SaltStack4506Block')]",
                    "properties": {
                      "protocol": "*",
                      "sourcePortRange": "*",
                      "destinationPortRange": "4506",
                      "sourceAddressPrefix": "*",
                      "destinationAddressPrefix": "Internet",
                      "access": "Deny",
                      "priority": 4001,
                      "direction": "Inbound",
                      "sourcePortRanges": [],
                      "destinationPortRanges": [],
                      "sourceAddressPrefixes": [],
                      "destinationAddressPrefixes": []
                    }
                  }
              ]
            }
          }
        }
      }
    }
  }
}
